--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,8 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers.js"></script>
+    <script src="scripts/directives.js"></script>
+    <script src="scripts/templates.js"></script>
     <!-- endbuild -->
 
     <!-- cordova script (this will be a 404 during development) -->
