--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,7 @@
     <script src="scripts/controllers.js"></script>
     <script src="scripts/directives.js"></script>
     <script src="scripts/templates.js"></script>
+    <script src="scripts/services.js"></script>
     <!-- endbuild -->
 
     <!-- cordova script (this will be a 404 during development) -->
