--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,7 @@
     <script src="scripts/directives.js"></script>
     <script src="scripts/templates.js"></script>
     <script src="scripts/services.js"></script>
+    <script src="scripts/factories.js"></script>
     <!-- endbuild -->
 
     <!-- cordova script (this will be a 404 during development) -->
