refactoring files organization

--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,15 @@
     <script src="scripts/services.js"></script>
     <script src="scripts/factories.js"></script>
     <script src="scripts/constants.js"></script>
+    <script src="scripts/cart/directives/Cart.js"></script>
+    <script src="scripts/cart/services/ShoppingCart.js"></script>
+    <script src="scripts/pizzas/directives/Pizzas.js"></script>
+    <script src="scripts/pizzas/factories/PizzaSize.js"></script>
+    <script src="scripts/pizzas/factories/PizzaDough.js"></script>
+    <script src="scripts/pizzas/factories/PizzaOrder.js"></script>
+    <script src="scripts/empanadas/directives/Empanadas.js"></script>
+    <script src="scripts/empanadas/factories/Empanada.js"></script>
+    <script src="scripts/empanadas/factories/EmpanadaOrder.js"></script>
     <!-- endbuild -->
 
     <!-- cordova script (this will be a 404 during development) -->
