user is able to update/edit pizza qty

--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,7 @@
     <script src="scripts/cart/directives/Cart.js"></script>
     <script src="scripts/cart/services/ShoppingCart.js"></script>
     <script src="scripts/pizzas/directives/Pizzas.js"></script>
+    <script src="scripts/pizzas/directives/PizzaQty.js"></script>
     <script src="scripts/pizzas/factories/Pizza.js"></script>
     <script src="scripts/pizzas/factories/PizzaSize.js"></script>
     <script src="scripts/pizzas/factories/PizzaDough.js"></script>
