--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,9 @@
     <script src="scripts/empanadas/directives/Empanadas.js"></script>
     <script src="scripts/empanadas/factories/Empanada.js"></script>
     <script src="scripts/empanadas/factories/EmpanadaOrder.js"></script>
+    <script src="scripts/order/directives/Order.js"></script>
+    <script src="scripts/order/factories/OrderContact.js"></script>
+    <script src="scripts/order/factories/OrderDelivery.js"></script>
     <!-- endbuild -->
 
     <!-- cordova script (this will be a 404 during development) -->
