--- a/app/index.html
+++ b/app/index.html
@@ -56,8 +56,11 @@
     <script src="scripts/empanadas/factories/Empanada.js"></script>
     <script src="scripts/empanadas/factories/EmpanadaOrder.js"></script>
     <script src="scripts/order/directives/Order.js"></script>
+    <script src="scripts/order/services/OrderService.js"></script>
     <script src="scripts/order/factories/OrderContact.js"></script>
     <script src="scripts/order/factories/OrderDelivery.js"></script>
+    <script src="scripts/order/factories/OrderDetails.js"></script>
+    <script src="scripts/order/factories/PlaceOrderResponse.js"></script>
     <!-- endbuild -->
 
     <!-- cordova script (this will be a 404 during development) -->
@@ -65,3 +68,4 @@
 
   </body>
 </html>
+
