PROMO - Initial attempt - basic app integration

--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,13 @@
     <script src="scripts/order/factories/OrderContact.js"></script>
     <script src="scripts/order/factories/OrderDelivery.js"></script>
     <script src="scripts/order/factories/OrderDetails.js"></script>
+    <script src="scripts/order/factories/OrderPromo.js"></script>
     <script src="scripts/order/factories/PlaceOrderResponse.js"></script>
+
+    <script src="scripts/promo/factories/Promo.js"></script>
+    <script src="scripts/promo/factories/Promo_Empanadas_Qty_Type.js"></script>
+
+
     <!-- endbuild -->
 
     <!-- cordova script (this will be a 404 during development) -->
