PROMO - Refactor: promo creation moved to factory

--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,8 @@
     <script src="scripts/promotion/factories/Promotion.js"></script>
     <script src="scripts/promotion/factories/PromotionDetails.js"></script>
     <script src="scripts/promotion/factories/PromoTypeQuantity.js"></script>
+    <script src="scripts/promotion/factories/PromotionTypeFactory.js"></script>
+
 
 
     <!-- endbuild -->
