--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,7 @@
     <script src="scripts/order/factories/PlaceOrderResponse.js"></script>
     <script src="scripts/review/directives/Review.js"></script>
     <script src="scripts/quantity/directives/Qty.js"></script>
+    <script src="scripts/facebook/directives/FacebookLogin.js"></script>
 
     <script src="scripts/promotion/directives/Promotions.js"></script>
     <script src="scripts/promotion/factories/Promotion.js"></script>
