--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,7 @@
     <script src="scripts/review/directives/Review.js"></script>
     <script src="scripts/quantity/directives/Qty.js"></script>
     <script src="scripts/facebook/directives/FacebookLogin.js"></script>
+    <script src="scripts/google/directives/GoogleLogin.js"></script>
 
     <script src="scripts/promotion/directives/Promotions.js"></script>
     <script src="scripts/promotion/factories/Promotion.js"></script>
