--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,7 @@
     <script src="scripts/quantity/directives/Qty.js"></script>
     <script src="scripts/facebook/directives/FacebookLogin.js"></script>
     <script src="scripts/google/directives/GoogleLogin.js"></script>
+    <script src="scripts/twitter/directives/TwitterLogin.js"></script>
 
     <script src="scripts/promotion/directives/Promotions.js"></script>
     <script src="scripts/promotion/factories/Promotion.js"></script>
