--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,7 @@
     <script src="scripts/services.js"></script>
     <script src="scripts/factories.js"></script>
     <script src="scripts/constants.js"></script>
+    <script src="scripts/config/constants/Config.js"></script>
     <script src="scripts/cart/directives/Cart.js"></script>
     <script src="scripts/cart/services/ShoppingCart.js"></script>
     <script src="scripts/delivery/directives/Delivery.js"></script>
