extract order ref factory

--- a/app/index.html
+++ b/app/index.html
@@ -59,6 +59,7 @@
     <script src="scripts/empanada/factories/Empanada.js"></script>
     <script src="scripts/empanada/factories/EmpanadaOrder.js"></script>
     <script src="scripts/order/services/Order.js"></script>
+    <script src="scripts/order/factories/OrderRef.js"></script>
     <script src="scripts/order/factories/PlaceOrderResponse.js"></script>
     <script src="scripts/review/directives/Review.js"></script>
     <script src="scripts/quantity/directives/Qty.js"></script>
