PROMOS - Change approach1

--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,7 @@
     <script src="scripts/google/directives/GoogleLogin.js"></script>
     <script src="scripts/twitter/directives/TwitterLogin.js"></script>
 
+    <script src="scripts/promotion/services/PromotionService.js"></script>
     <script src="scripts/promotion/directives/Promotions.js"></script>
     <script src="scripts/promotion/factories/Promotion.js"></script>
     <script src="scripts/promotion/factories/PromotionDetails.js"></script>
