BEBIDAS - Adding module

--- a/app/index.html
+++ b/app/index.html
@@ -73,6 +73,10 @@
     <script src="scripts/promotion/factories/PromoTypeQuantity.js"></script>
     <script src="scripts/promotion/factories/PromotionTypeFactory.js"></script>
 
+    <script src="scripts/bebida/directives/Bebidas.js"></script>
+    <script src="scripts/bebida/factories/Bebida.js"></script>
+    <script src="scripts/bebida/factories/BebidaSize.js"></script>
+    <script src="scripts/bebida/factories/BebidaOrder.js"></script>
 
 
     <!-- endbuild -->
