--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,7 @@
     <script src="scripts/bebida/factories/Bebida.js"></script>
     <script src="scripts/bebida/factories/BebidaSize.js"></script>
     <script src="scripts/bebida/factories/BebidaOrder.js"></script>
+    <script src="scripts/bebida/factories/BebidaPromoOrder.js"></script>
 
 
     <!-- endbuild -->
