address validation delivery radio

--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,7 @@
     <script src="scripts/cart/services/ShoppingCart.js"></script>
     <script src="scripts/delivery/directives/Delivery.js"></script>
     <script src="scripts/contact/directives/Contact.js"></script>
+    <script src="scripts/contact/services/Geo.js"></script>
     <script src="scripts/pizza/directives/Pizzas.js"></script>
     <script src="scripts/pizza/factories/Pizza.js"></script>
     <script src="scripts/pizza/factories/PizzaSize.js"></script>
@@ -82,8 +83,12 @@
 
     <!-- endbuild -->
 
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+
+
 
   </body>
 </html>
