--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@
     <script src="scripts/twitter/directives/TwitterLogin.js"></script>
 
     <script src="scripts/promotion/services/PromotionService.js"></script>
+    <script src="scripts/promotion/services/PromotionUtil.js"></script>
     <script src="scripts/promotion/directives/Promotions.js"></script>
     <script src="scripts/promotion/factories/Promotion.js"></script>
     <script src="scripts/promotion/factories/PromotionDetails.js"></script>
