store selection saved to order

--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,8 @@
     <script src="scripts/bebida/factories/BebidaOrder.js"></script>
     <script src="scripts/bebida/factories/BebidaPromoOrder.js"></script>
 
+    <script src="scripts/store/controllers/StoreCtrl.js"></script>
+
 
     <!-- endbuild -->
 
