confirmation view detail

--- a/app/index.html
+++ b/app/index.html
@@ -82,6 +82,7 @@
     <script src="scripts/bebida/factories/BebidaPromoOrder.js"></script>
 
     <script src="scripts/store/controllers/StoreCtrl.js"></script>
+    <script src="scripts/confirmation/controllers/ConfirmationCtrl.js"></script>
 
 
     <!-- endbuild -->
