STORES: Hours / isOpen initial version

--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,8 @@
     <script src="bower_components/angularfire/angularfire.js"></script>
     <script src="bower_components/lodash/dist/lodash.compat.js"></script>
     <script src="bower_components/angular-bindonce/bindonce.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/moment-range/lib/moment-range.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
