--- a/app/index.html
+++ b/app/index.html
@@ -82,6 +82,10 @@
     <script src="scripts/store/controllers/StoreCtrl.js"></script>
     <script src="scripts/confirmation/controllers/ConfirmationCtrl.js"></script>
 
+    <script src="scripts/product/factories/ProductFactory.js"></script>
+
+
+
 
     <!-- endbuild -->
 
