--- a/app/index.html
+++ b/app/index.html
@@ -83,6 +83,7 @@
     <script src="scripts/confirmation/controllers/ConfirmationCtrl.js"></script>
 
     <script src="scripts/product/factories/ProductFactory.js"></script>
+    <script src="scripts/product/directives/ProductOptions.js"></script>
 
 
 
