--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,7 @@
 
     <script src="scripts/product/factories/Product.js"></script>
     <script src="scripts/product/factories/ProductFactory.js"></script>
+    <script src="scripts/product/directives/Product.js"></script>
     <script src="scripts/product/directives/ProductOptions.js"></script>
 
 
