Refactor: Extract stores JSON to a separate file

--- a/app/index.html
+++ b/app/index.html
@@ -73,14 +73,18 @@
     <script src="scripts/promotion/factories/PromotionTypeFactory.js"></script>
 
     <script src="scripts/store/controllers/StoreCtrl.js"></script>
-    <script src="scripts/confirmation/controllers/ConfirmationCtrl.js"></script>
-    <script src="scripts/product/controllers/EditProduct.js"></script>
+    <script src="scripts/store/services/Store.js"></script>
+    <script src="scripts/store/services/StoreFileAdapter.js"></script>
 
+    <script src="scripts/confirmation/controllers/ConfirmationCtrl.js"></script>
+
+    <script src="scripts/product/controllers/EditProduct.js"></script>
     <script src="scripts/product/factories/Product.js"></script>
     <script src="scripts/product/directives/Product.js"></script>
     <script src="scripts/product/directives/ProductOptions.js"></script>
 
 
+    <script src="data/branches.json"></script>
 
 
     <!-- endbuild -->
