Refactor: Product service moved over to its own module

--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,7 @@
 
     <script src="scripts/confirmation/controllers/ConfirmationCtrl.js"></script>
 
+    <script src="scripts/product/services/Product.js"></script>
     <script src="scripts/product/controllers/EditProduct.js"></script>
     <script src="scripts/product/factories/Product.js"></script>
     <script src="scripts/product/directives/Product.js"></script>
