--- a/app/index.html
+++ b/app/index.html
@@ -79,6 +79,7 @@
     <script src="scripts/confirmation/controllers/ConfirmationCtrl.js"></script>
 
     <script src="scripts/product/services/Product.js"></script>
+    <script src="scripts/product/services/ProductFileAdapter.js"></script>
     <script src="scripts/product/controllers/EditProduct.js"></script>
     <script src="scripts/product/factories/Product.js"></script>
     <script src="scripts/product/directives/Product.js"></script>
@@ -86,6 +87,7 @@
 
 
     <script src="data/branches.json"></script>
+    <script src="data/menu.json"></script>
 
 
     <!-- endbuild -->
