moved json local files into constants

--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,7 @@
     <script src="scripts/promotion/factories/PromotionTypeFactory.js"></script>
 
     <script src="scripts/store/controllers/StoreCtrl.js"></script>
+    <script src="scripts/store/constants/branches.js"></script>
     <script src="scripts/store/factories/Store.js"></script>
     <script src="scripts/store/services/StoreSvc.js"></script>
     <script src="scripts/store/services/StoreFileAdapter.js"></script>
@@ -79,6 +80,7 @@
     <script src="scripts/confirmation/controllers/ConfirmationCtrl.js"></script>
 
     <script src="scripts/product/services/Product.js"></script>
+    <script src="scripts/product/constants/menu.js"></script>
     <script src="scripts/product/services/ProductFileAdapter.js"></script>
     <script src="scripts/product/controllers/EditProduct.js"></script>
     <script src="scripts/product/factories/Product.js"></script>
